This file should describe the bigest and most important API changes.

2004-09-13
	
	Stanza, Message, Iq and Presence constructors arguments have been
	changed so build-ins "type" and "id" are not redefined. So the "type"
	argument has been changed to "typ" and the "id" argument to "sid"
	(stanza id).

2004-09-03

	Stream.data_in and Stream.data_out callbacks removed. Data sent and
	received is now logged via 'logging' module to 'pyxmpp.Stream.out' and
	'pyxmpp.Stream.in' loggers.  The raw data is available for logging
	handlers as the first element of 'args' attribute of the log record
	(record.args[0]).

2004-08-29

	All debug messages are passed to the standard python 'logging' module.
	There is no debug() methods in PyXMPP classes any more.

2005-06-02

	Python 2.2 support is gone. Compliant XMPP implementation
	requires stringprep and IDN support. Python 2.3 provides both,
	Python 2.2 none. Maintaining separete stringprep and IDN
	implementations for use with Python 2.2 is IMHO not worth the effort
	needed.

2005-05-28

	Roster and RosterItems classes rewritten. Now they are not wrapper
	around roster XML node any more. Old code was complicated, slow,
	and not standard compliant (ingored stringprep profiles).

	Most important changes:
	- no `node` attribute in Roster and RosterItem
	- RosterItem constructor doesn't take `roster` argument any more
	- `jid`, `ask`, `subscription`, `name` and `groups` are now attributes,
	  not methods, of `RosterItem`
	- `add_group`, `rm_group`, etc. methods of `RosterItem` are gone. Use
	  list operations on `groups` attribute now.
	- inline documentation included
	