@@ -17,7 +17,7 @@
 
 """Presence XMPP stanza handling"""
 
-__revision__="$Id: presence.py,v 1.22 2004/09/15 21:23:13 jajcus Exp $"
+__revision__="$Id: presence.py,v 1.23 2004/09/16 19:57:26 jajcus Exp $"
 __docformat__="restructuredtext en"
 
 import libxml2
@@ -45,31 +45,31 @@ deny_responses={
 class Presence(Stanza):
     """Wraper object for <presence /> stanzas."""
     stanza_type="presence"
-    def __init__(self,node=None,fr=None,to=None,typ=None,sid=None,
+    def __init__(self,node=None,from_jid=None,to_jid=None,stanza_type=None,stanza_id=None,
             show=None,status=None,priority=0,error=None,error_cond=None):
         """Initialize a `Presence` object.
 
         :Parameters:
-            - `node`: XML node to be wrapped into the `Presence` object
-              or other Presence object to be copied. If not given then new
+            - `node`: XML node to_jid be wrapped into the `Presence` object
+              or other Presence object to_jid be copied. If not given then new
               presence stanza is created using following parameters.
-            - `fr`: sender JID.
-            - `to`: recipient JID.
-            - `typ`: staza type: one of: None, "available", "unavailable",
+            - `from_jid`: sender JID.
+            - `to_jid`: recipient JID.
+            - `stanza_type`: staza type: one of: None, "available", "unavailable",
               "subscribe", "subscribed", "unsubscribe", "unsubscribed" or
-              "error". "available" is automaticaly changed to None.
-            - `sid`: stanza id -- value of stanza's "id" attribute
+              "error". "available" is automaticaly changed to_jid None.
+            - `stanza_id`: stanza id -- value of stanza's "id" attribute
             - `show`: "show" field of presence stanza. One of: None, "away",
               "xa", "dnd", "chat".
             - `status`: descriptive text for the presence stanza.
             - `priority`: presence priority.
-            - `error_cond`: error condition name. Ignored if `typ` is not "error"
+            - `error_cond`: error condition name. Ignored if `stanza_type` is not "error"
         :Types:
             - `name_or_node`: `unicode` or `libxml2.xmlNode` or `Stanza`
-            - `fr`: `JID`
-            - `to`: `JID`
-            - `typ`: `unicode`
-            - `sid`: `unicode`
+            - `from_jid`: `JID`
+            - `to_jid`: `JID`
+            - `stanza_type`: `unicode`
+            - `stanza_id`: `unicode`
             - `show`: `unicode`
             - `status`: `unicode`
             - `priority`: `unicode`
@@ -84,16 +84,16 @@ class Presence(Stanza):
         elif node is not None:
             raise TypeError,"Couldn't make Presence from %r" % (type(node),)
 
-        if typ and typ not in presence_types:
+        if stanza_type and stanza_type not in presence_types:
             raise StanzaError,"Invalid presence type: %r" % (type,)
 
-        if typ=="available":
-            typ=None
+        if stanza_type=="available":
+            stanza_type=None
 
         if node is None:
             node="presence"
             
-        Stanza.__init__(self, node, fr=fr, to=to, typ=typ, sid=sid,
+        Stanza.__init__(self, node, from_jid=from_jid, to_jid=to_jid, stanza_type=stanza_type, stanza_id=stanza_id,
                 error=error, error_cond=error_cond)
        
         if show:
@@ -219,8 +219,8 @@ class Presence(Stanza):
             raise StanzaError,("Results may only be generated for 'subscribe',"
                 "'subscribed','unsubscribe' or 'unsubscribed' presence")
 
-        pr=Presence(typ=accept_responses[self.get_type()],
-            fr=self.get_to(),to=self.get_from(),sid=self.get_id())
+        pr=Presence(stanza_type=accept_responses[self.get_type()],
+            from_jid=self.get_to(),to_jid=self.get_from(),stanza_id=self.get_id())
         return pr
 
     def make_deny_response(self):
@@ -233,8 +233,8 @@ class Presence(Stanza):
             raise StanzaError,("Results may only be generated for 'subscribe',"
                 "'subscribed','unsubscribe' or 'unsubscribed' presence")
 
-        pr=Presence(typ=accept_responses[self.get_type()],
-            fr=self.get_to(),to=self.get_from(),sid=self.get_id())
+        pr=Presence(stanza_type=accept_responses[self.get_type()],
+            from_jid=self.get_to(),to_jid=self.get_from(),stanza_id=self.get_id())
         return pr
 
     def make_error_response(self,cond):
@@ -251,8 +251,8 @@ class Presence(Stanza):
         if self.get_type() == "error":
             raise StanzaError,"Errors may not be generated in response to errors"
 
-        p=Presence(typ="error",fr=self.get_to(),to=self.get_from(),
-            sid=self.get_id(),error_cond=cond)
+        p=Presence(stanza_type="error",from_jid=self.get_to(),to_jid=self.get_from(),
+            stanza_id=self.get_id(),error_cond=cond)
 
         if self.node.children:
             n=self.node.children
